--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -1,5 +1,6 @@
 include Makefile.inc
 
+MEM_MANAGER=listfree # buddy o listfree
 KERNEL=kernel.bin
 SOURCES=$(wildcard *.c)
 SOURCES_INTERRUPTIONS=$(wildcard interruptions/*.c)
@@ -16,10 +17,16 @@ STATICLIBS=
 
 ALL_OBJECTS= $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTIONS) $(OBJECTS_INTERRUPTIONS_ASM)
 
-all: $(KERNEL)
+all: $(MEM_MANAGER) $(KERNEL)
 
 $(KERNEL): $(STATICLIBS) $(ALL_OBJECTS)
 	$(LD) $(LDFLAGS) -T kernel.ld -o $@ $^
+
+buddy:
+	$(GCC) $(GCCFLAGS) -I./include -c "memoryManager/buddyManager.c" -o memoryManager.o
+
+listfree:
+	$(GCC) $(GCCFLAGS) -I./include -c "memoryManager/memoryManager.c" -o memoryManager.o
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -I./interruptions -c $< -o $@
@@ -31,6 +38,6 @@ $(LOADEROBJECT):
 	$(ASM) $(ASMFLAGS) $(LOADERSRC) -o $(LOADEROBJECT)
 
 clean:
-	rm -rf $(ALL_OBJECTS) *.bin
+	rm -rf $(ALL_OBJECTS) *.bin memoryManager.o
 
 .PHONY: all clean
